Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

01-Oct-2009 Ercan Ozkaya
 ^ Replaced all $ instances to document.id for Mootools except third party classes

29-Sep-2009 Ron Severdia
# Template Manager cleanup
# CSS for com_users
^ Replace tables
+ New ACL icons

29-Sep-2009 Gergo Erdosi
 # Fixed some call_user_func_array() bugs.

28-Sep-2009 Ron Severdia
 # Fix visual issues in config/menus/users
 # Fix form structure & element order
 $ Fix language strings, CSS fixes

28-Sep-2009 Ron Severdia
 ^ CSS cleanup
 ^ Changed commented-out to CSS hide in edit category

28-Sep-2009 Ron Severdia
 # CSS fixes
 $ Missing language strings added
 ^ Replaced tables from user config

28-Sep-2009 Gergo Erdosi
 # Fixed bug in installation SQL file.

28-Sep-2009 Andrew Eddie
 + Added JControllerForm (to support basic edit operations).
 + Added table jos_languages.
 + Added support to add and edit content languages.
 ^ Updated frontend content router to support more category path scenarios.
 + Added archived state support to JHtmlJGrid::published
 + Added ContentLanguages JForm field and JElement.

26-Sep-2009 Andrew Eddie
 ^ Install from directory now remembers previous path.
 ^ Refactored language installation error messages.
 ^ Forced language installation file to require client attribute.
 ^ Refactored System Debug language strings.
 + New options in System Debug plugin to more tightly control how the untranslated string present

25-Sep-2009 Mark Dexter
 # Add extension to new Category in Content->Category Manager

23-Sep-2009 Hannes Papenberg
 ^ Added class and ID to radio buttons

21-Sep-2009 Mark Dexter
 ^ Merge from dextercowley branch
 ^ Layouts for frontend components
 ^ Make com_contact MVC
 ^ Fix a number of issues in in com_menus
 ^ Fix problem in administrator menu